# Luloviam

./: CMakeLists.txt  README.rst  tasks_list.rst  test_list.rst
src/: kalexer.h  str_utils.h
tests/: CMakeLists.txt  test_dummy.cpp  test_lexer.cpp  test_str_utils.cpp
